locker: remove pixel measurements from default css locker: added options for images and fonts, defaulting to relative measurements locker: set css class based on generalised monitor size locker: debug mode uses first monitor it finds only locker: fix overlay icon misalignment util: fix non-integer font sizes

--- a/data/css/default.css
+++ b/data/css/default.css
@@ -198,9 +198,6 @@
     border-radius: 10px;
     background: #0004;
 }
-.wf-locker .fingerprint-overlay-image {
-    -gtk-icon-size: 64px;
-}
 .wf-locker .fingerprint-overlay-image.good {
     color: #0f0;
 }
@@ -211,34 +208,44 @@
     color: #88f;
 }
 
-.wf-locker .mpris image.albumart {
-    -gtk-icon-size:96px;
-}
 .wf-locker .user label {
-    font-size: 70px;
     font-weight: bold;
     text-transform: capitalize;
 }
-.wf-locker .user image {
-    -gtk-icon-size:256px;
-}
 .wf-locker image.weather {
-    -gtk-icon-size:128px;
     padding-left: 25px;
     padding-right: 25px;
     padding-bottom: 100px;
 }
 .wf-locker label.weather {
-    font-size: 128px;
     font-weight: bold;
     padding-left: 100px;
     padding-bottom: 75px;
 }
 .wf-locker label.clock {
-    font-size: 128px;
     font-weight: bold;
     padding-right: 100px;
     padding-bottom: 75px;
+}
+
+.wf-locker.sized-480 {
+    font-size:6px;
+}
+
+.wf-locker.sized-720 {
+    font-size:7px;
+}
+
+.wf-locker.sized-1080 {
+    font-size:10px;
+}
+
+.wf-locker.sized-1440 {
+    font-size:14px;
+}
+
+.wf-locker.sized-2160 {
+    font-size:18px;
 }
 
 @keyframes embiggen {
